# school-management

./: .gitignore  :w  CMakeLists.txt  README.md  line_count.sh
include/: ansi_ecs.h  array.c  array.h  err_msg.h  fix_string.c  fix_string.h  keyboardio.c  keyboardio.h  list.c  list.h  main  main.c  mapstr.c  mapstr.h  queue.h  test.c  type.h  util.c  util.h  var_string.c  var_string.h  vector.c  vector.h
plan/: database.scrvn
scripts/: file_count.sh
src/: main.c  settings.h
src/database/: block.c  block.h  db.c  db.h  db_main.h  dbio.c  dbio.h  err_msg.h  student.c  student.h
src/gui/: gui.c  gui.h
src/gui/gui_sys/: container.c  container.h  gui_sys.h  input.c  input.h  menu.c  menu.h  renderer.c  renderer.h  selector.c  selector.h  trig.c  trig.h
src/gui/gui_sys/components/: header.c  header.h  option.c  option.h  text.c  text.h
src/network/: err_msg.h  networkio.c  networkio.h  package.h  packet.c  packet.h  settings.h
src/network/client/: client.c  client.h
src/network/message/: README.md  err_msg.h  message.c  message.h
src/network/message/request/: handler.c  handler.h  lexer.c  lexer.h  req_type.h  request.c  request.h
src/network/packet/: mk_std_send_recv_func.h  packet.c  packet.h  packet_all.h  ping.c  ping.h  req_resp_balance.c  req_resp_balance.h  req_resp_id_by_name.c  req_resp_id_by_name.h  req_resp_id_from_name.c  req_resp_id_from_name.h
src/network/request/: data.c  data.h  err_msg.h  handler.c  handler.h  lexer.c  lexer.h  parser.c  parser.h  request.c  request.h
src/network/server/: server.c  server.h
src/ui/: ui_main.c  ui_main.h
src/ui/ui/: component.c  component.h  container.c  container.h  control.c  control.h  menu.c  menu.h  renderer.c  renderer.h  selector.c  selector.h  trig.c  trig.h  ui.c  ui.h  ui_all.h
src/ui/ui/components/: component.h  header.c  header.h  option.c  option.h  text.c  text.h
tests/: var_string.test  var_string.test.c  vector.test  vector.test.c
